# ruok

./: .gitignore  README.md  pyproject.toml
macos/RUOKMenuBar/: Package.swift
macos/RUOKMenuBar/Sources/RUOKMenuBar/: AdviceFormatter.swift  AppConfig.swift  AppDelegate.swift  AppLogger.swift  ImageDiff.swift  ImageTools.swift  Models.swift  MonitorController.swift  MonitorService.swift  NotificationManager.swift  OllamaVisionAdvisor.swift  RUOKMenuBarApp.swift  RunStore.swift  ScreenshotCapturer.swift
macos/RUOKMenuBar/Tests/RUOKMenuBarTests/: AdviceRecordTests.swift
ruok/: __init__.py  capture.py  cli.py  image_diff.py  image_storage.py  models.py  notifier.py  ollama_client.py  store.py  worker.py
scripts/: build-menu-bar-app.sh  install-launch-agent.sh
tests/: test_cli.py  test_image_diff.py  test_image_storage.py  test_monitor_service.py  test_notifications.py  test_ollama_client.py  test_store.py
