[project]
name = "ruok"
version = "0.1.0"
description = "Local screen check-in app powered by a local vision LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mss>=9.0.1",
    "pillow>=10.4.0",
    "pync>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.2",
]

[project.scripts]
ruok = "ruok.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
